use pygment monokai code highlight theme, remove code block scroll bar, fix weird first line un-alignment

--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -196,13 +196,6 @@ hr {
 }
 
 /**
- * Contain overflow in all browsers.
- */
-pre {
-  overflow: auto;
-}
-
-/**
  * Address odd `em`-unit font size rendering in all browsers.
  */
 code,
